--- a/proj/requirements.txt
+++ b/proj/requirements.txt
@@ -13,3 +13,4 @@ apispec-webframeworks
 tox
 celery[redis]>=5.0.0
 gunicorn
+-e git+https://github.com/robertatakenaka/scielo_core.git@v0.15#egg=scielo_core
